fixed wrap layout for wp-block-cover

--- a/css/main.scss
+++ b/css/main.scss
@@ -22,9 +22,14 @@ $light-grey: #D4D4D4;
   margin: 0 auto;
 }
 
-.wp-block-cover {
+.wp-block-cover:nth-of-type(1) {
   width: 100vw;
   margin-left: calc(50% - 50vw);
+}
+
+.actual-content .wp-block-cover {
+  width: 100%;
+  margin-left: 0;
 }
 
 /**** base on mobile ****/
